<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/cl_weather_layout"
    android:visibility="invisible"
    xmlns:tools="http://schemas.android.com/tools">
  
    <RelativeLayout
        android:id="@+id/top_relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    
      <TextView
          android:id="@+id/country_city_name"
          style="@style/TextAppearance.Material3.HeadlineMedium"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/tv_country_city_name"
          android:paddingStart="15dp"
          android:paddingTop="10dp"
          android:paddingEnd="5dp"
          android:paddingBottom="5dp" />
    
      <TextView
          android:id="@+id/updated_date"
          style="@style/TextAppearance.Material3.BodyLarge"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="35dp"
          android:text="@string/tv_updated_on"
          android:paddingStart="15dp"
          android:paddingTop="10dp"
          android:paddingEnd="5dp"
          android:paddingBottom="5dp" />
    </RelativeLayout>
    <TextView
        android:id="@+id/tv_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="70sp"
        android:paddingStart="15dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_relativeLayout"
        android:text="33" />
  
  <TextView
      android:id="@+id/degree_celsius"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="12dp"
      android:text="@string/degree_celsius_symbol"
      android:textSize="30sp"
      app:layout_constraintStart_toEndOf="@id/tv_temperature"
      app:layout_constraintTop_toTopOf="@id/tv_temperature" />
  
  <TextView
      android:id="@+id/condition_description"
      style="@style/TextAppearance.Material3.BodyLarge"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingStart="15dp"
      android:paddingEnd="5dp"
      android:paddingBottom="5dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tv_temperature" />
  
  <ImageView
      android:id="@+id/iv_weather_condition"
      android:layout_width="48dp"
      android:layout_height="48dp"
      android:contentDescription="@string/condition_icon_description"
      android:scaleType="centerCrop"
      app:layout_constraintStart_toStartOf="@id/condition_description"
      app:layout_constraintTop_toTopOf="@id/condition_description"
      app:layout_constraintEnd_toEndOf="parent"
      tools:src="@drawable/clear_sky" />
  
  <LinearLayout
      android:id="@+id/ll_temp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingStart="15dp"
      android:paddingEnd="5dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/condition_description">
    <TextView
        android:id="@+id/max_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="20"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp"
        app:drawableLeftCompat="@drawable/baseline_arrow_upward_24" />
    <TextView
        android:id="@+id/min_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="-1"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp"
        app:drawableLeftCompat="@drawable/baseline_arrow_downward_24" />
  </LinearLayout>
  
  <include
      layout="@layout/weather_details_layout"
      android:id="@+id/weather_details_layout"
      android:layout_marginTop="24dp"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/ll_temp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />
  
</androidx.constraintlayout.widget.ConstraintLayout>